--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
                     <div class="collapse navbar-collapse" id="navbarText">
                         <ul class="ml-auto mr-20 navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                                <a class="nav-link" aria-current="page" href="/index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html#about-us">About Us</a>
+                                <a class="nav-link" href="/index.html#about-us">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html#artikel">Article</a>
+                                <a class="nav-link" href="/index.html#artikel">Article</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html#gallery">Gallery</a>
+                                <a class="nav-link" href="/index.html#gallery">Gallery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html#magazine">Magazine</a>
+                                <a class="nav-link" href="/index.html#magazine">Magazine</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html#artikel">News</a>
+                                <a class="nav-link" href="/index.html#artikel">News</a>
                             </li>
                         </ul>
                         <button class="btn-upload" type="button">Upload Karyamu !</button>
@@ -72,7 +72,7 @@
                     <h2 class="isi-1">Pojok Aksi dan Informasi Bina Nusantara Malang</h2>
                     <p class="text-lg "> Panorama adalah UKM yang berisi kegiatan mahasiswa untuk meliput berita disekitar kampus Bina Nusantara Region Malang. </p>
 
-                   
+
                 </div>
                 <div class="col-lg-1"></div>
                 <div class=" foto-panorama col-lg-7 d-flex justify-content-around" data-aos="fade-left">
@@ -157,16 +157,16 @@
                             <div class="px-6 py-4 ">
                                 <div class="mb-2 text-xl font-bold title ">Kamera Polaroid</div>
                                 <p class="text-base font-bold text-gray-700 ">
-                                    Polaroid merupakan merk dari perusahaan kamera polaroid, perusahaan polaroid ini 
+                                    Polaroid merupakan merk dari perusahaan kamera polaroid, perusahaan polaroid ini
                                 </p>
                             </div>
                         </div>
                     </div>
                     <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5 " id="card-artikel ">
                         <div class="overflow-hidden shadow-lg card-artikel ">
-                          <a href="./public/artikel-detail2.html">
-                            <img class="object-cover object-center w-full h-56 " src="/public/images/detail-artikel2.jpg " alt="Mountain ">
-                          </a>
+                            <a href="./public/artikel-detail2.html">
+                                <img class="object-cover object-center w-full h-56 " src="/public/images/detail-artikel2.jpg " alt="Mountain ">
+                            </a>
                             <div class="px-6 py-4 ">
                                 <div class="mb-2 text-xl font-bold title ">Fotografi Bukan Sekedar Cekrek!</div>
                                 <p class="text-base font-bold text-gray-700 ">
@@ -183,7 +183,7 @@
                             <div class="px-6 py-4 ">
                                 <div class="mb-2 text-xl font-bold title ">Ragam Kamera</div>
                                 <p class="text-base font-bold text-gray-700 ">
-                                    Apakah anda tertarik dengan fotografi? Jika iya, kemungkinan besar anda akan 
+                                    Apakah anda tertarik dengan fotografi? Jika iya, kemungkinan besar anda akan
                                 </p>
                             </div>
                         </div>
@@ -204,7 +204,7 @@
                 </div>
                 <div class="d-flex justify-content-end" data-aos="fade-right" data-aos-duration="3000">
                     <button class="px-4 py-2 font-bold text-white rounded-full md:mb-12 md:mr-20 hover:bg-blue-700 " id="btn-magazine">
-                        <a href="artikel.html " class="link-light ">View More</a>
+                        <a href="/public/artikel-detail.html " class="link-light ">View More</a>
                     </button>
                 </div>
             </div>
@@ -244,19 +244,19 @@
                     <img src="/public/images/gallery-5.jpg " width="300" alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
                 </div>
                 <div class="w-full ">
-                    <img src="/public/images/gallery-6.jpg" alt=""  width="300"  class="object-cover object-center md:h-56" id="foto-gallery ">
+                    <img src="/public/images/gallery-6.jpg" alt="" width="300" class="object-cover object-center md:h-56" id="foto-gallery ">
                 </div>
                 <div class="w-full">
                     <img src="/public/images/gallery-7.jpg" alt="" width="300" class="object-cover object-center md:h-56" id="foto-gallery ">
                 </div>
                 <div class="w-full ">
-                    <img src="/public/images/gallery-6.jpg" alt=""  width="300"  class="object-cover object-center md:h-56" id="foto-gallery ">
+                    <img src="/public/images/gallery-6.jpg" alt="" width="300" class="object-cover object-center md:h-56" id="foto-gallery ">
                 </div>
                 <div class="w-full ">
-                    <img src="/public/images/gallery-6.jpg" alt=""  width="300"  class="object-cover object-center md:h-56" id="foto-gallery ">
+                    <img src="/public/images/gallery-6.jpg" alt="" width="300" class="object-cover object-center md:h-56" id="foto-gallery ">
                 </div>
                 <div class="w-full ">
-                    <img src="/public/images/gallery-6.jpg" alt=""  width="300"  class="object-cover object-center md:h-56" id="foto-gallery ">
+                    <img src="/public/images/gallery-6.jpg" alt="" width="300" class="object-cover object-center md:h-56" id="foto-gallery ">
                 </div>
             </div>
         </div>
