--- a/public/artikel-detail2.html
+++ b/public/artikel-detail2.html
@@ -37,24 +37,23 @@
                     <div class="collapse navbar-collapse" id="navbarText">
                         <ul class="ml-auto mr-20 navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                                <a class="nav-link" aria-current="page" href="/index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html#about-us">About Us</a>
+                                <a class="nav-link" href="/index.html#about-us">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html#artikel">Article</a>
+                                <a class="nav-link" href="/index.html#artikel">Article</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html#gallery">Gallery</a>
+                                <a class="nav-link" href="/index.html#gallery">Gallery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html#magazine">Magazine</a>
+                                <a class="nav-link" href="/index.html#magazine">Magazine</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html#footer">Contact Us</a>
+                                <a class="nav-link" href="/index.html#artikel">News</a>
                             </li>
-
                         </ul>
                         <button class="btn-upload" type="button">Upload Karyamu !</button>
                         <ul>
@@ -76,45 +75,35 @@
                     <div class="mt-5 text-sm caption">
                         <h2>Pengertian Fotografi</h2>
                         <p>
-                        Menurut Kamus Besar Bahasa Indonesia (KBBI) fotografi diartikan sebagai seni dan penghasilan gambar dan cahaya pada film atau permukaan yang dipekakan. 
-                        Sedangkan menurut Wikipedia fotografi berasal dari Bahasa Inggris yaitu ‘photography’ yang mana berasal dari Bahasa Yunani yaitu 
-                        ‘photos’ artinya cahaya dan ‘Grafo’ yang artinya menulis atau melukis. Sehingga secara umum fotografi dapat diartikan sebagai proses
-                        melukis atau menulis dengan menggunakan media cahaya. Sementara itu menurut Ansel Adams, fotografi adalah sebagai media berekspresi dan 
-                        komunikasi yang kuat, menawarkan berbagai persepsi, interpretasi,dan ekseskusi yang tak terbatas.
+                            Menurut Kamus Besar Bahasa Indonesia (KBBI) fotografi diartikan sebagai seni dan penghasilan gambar dan cahaya pada film atau permukaan yang dipekakan. Sedangkan menurut Wikipedia fotografi berasal dari Bahasa Inggris yaitu ‘photography’ yang mana berasal
+                            dari Bahasa Yunani yaitu ‘photos’ artinya cahaya dan ‘Grafo’ yang artinya menulis atau melukis. Sehingga secara umum fotografi dapat diartikan sebagai proses melukis atau menulis dengan menggunakan media cahaya. Sementara itu
+                            menurut Ansel Adams, fotografi adalah sebagai media berekspresi dan komunikasi yang kuat, menawarkan berbagai persepsi, interpretasi,dan ekseskusi yang tak terbatas.
                         </p>
                         <h2>Teknik-teknik Fotografi</h2>
                         <p>
-                        Untuk menjadi fotografer tentunya tidak hanya bermodalkan peralatan yang ‘wah’ dalam arti jenis 
-                        kamera dan lensa yang lengkap. Salah satu kunci yang sangat penting bagi fotografer adalah menguasai 
-                        teknik-teknik fotografi. Banyak sekali teknik fotografi yang akan menambah variasi dan keindahan foto sehingga 
-                        menarik dan tidak monoton, antara lain:
+                            Untuk menjadi fotografer tentunya tidak hanya bermodalkan peralatan yang ‘wah’ dalam arti jenis kamera dan lensa yang lengkap. Salah satu kunci yang sangat penting bagi fotografer adalah menguasai teknik-teknik fotografi. Banyak sekali teknik fotografi
+                            yang akan menambah variasi dan keindahan foto sehingga menarik dan tidak monoton, antara lain:
                         </p>
                         <ul>
                             <li>Zooming</li>
-                            <p> Zooming adalah teknik yang membuat objek utama terlihat jelas, 
-                                sementara background terlihat kabur. Teknik ini berfungsi untuk mempertegas 
-                                objek dan membuatnya makin mencolok. Perubahan panjang focus hanya dapat dilakukan dengan 
-                                lensa zoom, gunakan kecepatan rana tidak lebih dari 1/30 detik untuk menghasilkan kesan gerak. 
-                                Dalam mengaplikasikan teknik ini sebaiknya menggunakan tripod.</p>
+                            <p> Zooming adalah teknik yang membuat objek utama terlihat jelas, sementara background terlihat kabur. Teknik ini berfungsi untuk mempertegas objek dan membuatnya makin mencolok. Perubahan panjang focus hanya dapat dilakukan dengan
+                                lensa zoom, gunakan kecepatan rana tidak lebih dari 1/30 detik untuk menghasilkan kesan gerak. Dalam mengaplikasikan teknik ini sebaiknya menggunakan tripod.</p>
                             <li>Panning</li>
-                            <p>Panning adalah salah satu teknik fotografi yang digunakan untuk membekukan gerakan pada benda yang bergerak. 
-                                Cara melakukan panning adalah dengan menggerakan kamera searah dengan arah gerakan objek yang ingin dibidik sehingga 
+                            <p>Panning adalah salah satu teknik fotografi yang digunakan untuk membekukan gerakan pada benda yang bergerak. Cara melakukan panning adalah dengan menggerakan kamera searah dengan arah gerakan objek yang ingin dibidik sehingga
                                 objek akan tampak focus, sementara background akan tampak kabur.</p>
                             <li>Freezing</li>
-                            <p>Adalah teknik memotret pada sebuah objek yang sedang bergerak, misalnya air, orang yang sedang berolahraga, 
-                                dengan seolah-olah kita dapat menghentikan objek yang sedang bergerak tersebut. Cara mengaplikasikan teknik tersebut 
+                            <p>Adalah teknik memotret pada sebuah objek yang sedang bergerak, misalnya air, orang yang sedang berolahraga, dengan seolah-olah kita dapat menghentikan objek yang sedang bergerak tersebut. Cara mengaplikasikan teknik tersebut
                                 adalah dengan menggunakan kecepatan /shutter speed lensa yang tinggi.</p>
                             <li>Macro</li>
-                            <p>Macro adalah teknik foto yang diambil dengan jarak yang sangat dekat untuk mendapatkan detail yang tinggi pada sebuah 
-                                objek berukuran kecil. Foto makro biasannya memiliki rasio 1:1 dimana gambar yang dihasilkan sama ukurannya dengan benda aslinya.</p>
+                            <p>Macro adalah teknik foto yang diambil dengan jarak yang sangat dekat untuk mendapatkan detail yang tinggi pada sebuah objek berukuran kecil. Foto makro biasannya memiliki rasio 1:1 dimana gambar yang dihasilkan sama ukurannya
+                                dengan benda aslinya.</p>
                             <li>Siluet</li>
-                            <p> Siluet adalah teknik foto dimana objek terlihat gelap sedangkan background atau latar belakang foto memiliki 
-                                warna yang lebih terang. Cara mengaplikasikan teknik ini adalah dengan menempatkan objek atau subjek di depan cahaya dengan mengatur exposure di kamera.</p>
+                            <p> Siluet adalah teknik foto dimana objek terlihat gelap sedangkan background atau latar belakang foto memiliki warna yang lebih terang. Cara mengaplikasikan teknik ini adalah dengan menempatkan objek atau subjek di depan cahaya
+                                dengan mengatur exposure di kamera.</p>
                             <li>Bulb</li>
-                            <p>Bulb adalah teknik foto menggambar menggunakan cahaya, berbeda dengan pengertian fotografi yang melukis 
-                                dengan cahaya. Bulb memotret cahaya di atas cahaya. Cara pengaplikasian teknik ini adalah dengan mengatur shutter 
-                                speed kamera selama mungkin sehingga akan mendapatkan garis-garis yang dihasilkan oleh objek bercahaya yang berjalan.</p>
-                        </ul>            
+                            <p>Bulb adalah teknik foto menggambar menggunakan cahaya, berbeda dengan pengertian fotografi yang melukis dengan cahaya. Bulb memotret cahaya di atas cahaya. Cara pengaplikasian teknik ini adalah dengan mengatur shutter speed
+                                kamera selama mungkin sehingga akan mendapatkan garis-garis yang dihasilkan oleh objek bercahaya yang berjalan.</p>
+                        </ul>
                     </div>
                 </div>
                 <div class=" md:row-span-3">
@@ -155,7 +144,7 @@
     </div>
 
     <!-- footer -->
-    <footer class="flex mt-10 md:mt-56 footer justify-items-start" id="footer" >
+    <footer class="flex mt-10 md:mt-56 footer justify-items-start" id="footer">
         <div class="container" id="item-footer">
             <div class="grid gap-4 md:grid-flow-col md:mt-6">
                 <div class="md:col-span-3">
@@ -173,14 +162,16 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path
                                 d="M12.031 6.172c-3.181 0-5.767 2.586-5.768 5.766-.001 1.298.38 2.27 1.019 3.287l-.582 2.128 2.182-.573c.978.58 1.911.928 3.145.929 3.178 0 5.767-2.587 5.768-5.766.001-3.187-2.575-5.77-5.764-5.771zm3.392 8.244c-.144.405-.837.774-1.17.824-.299.045-.677.063-1.092-.069-.252-.08-.575-.187-.988-.365-1.739-.751-2.874-2.502-2.961-2.617-.087-.116-.708-.94-.708-1.793s.448-1.273.607-1.446c.159-.173.346-.217.462-.217l.332.006c.106.005.249-.04.39.298.144.347.491 1.2.534 1.287.043.087.072.188.014.304-.058.116-.087.188-.173.289l-.26.304c-.087.086-.177.18-.076.354.101.174.449.741.964 1.201.662.591 1.221.774 1.394.86s.274.072.376-.043c.101-.116.433-.506.549-.68.116-.173.231-.145.39-.087s1.011.477 1.184.564.289.13.332.202c.045.072.045.419-.1.824zm-3.423-14.416c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm.029 18.88c-1.161 0-2.305-.292-3.318-.844l-3.677.964.984-3.595c-.607-1.052-.927-2.246-.926-3.468.001-3.825 3.113-6.937 6.937-6.937 1.856.001 3.598.723 4.907 2.034 1.31 1.311 2.031 3.054 2.03 4.908-.001 3.825-3.113 6.938-6.937 6.938z" />
-                            </svg>
+                        </svg>
                         <svg xmlns="http://www.w3.org/2000/svg " width="24 " height="24 " viewBox="0 0 24 24 " class="md:ml-3 ">
-                            <a href="https://instagram.com/panoramabinusmalang?utm_medium=copy_link">     <path
-                                d="M14.829 6.302c-.738-.034-.96-.04-2.829-.04s-2.09.007-2.828.04c-1.899.087-2.783.986-2.87 2.87-.033.738-.041.959-.041 2.828s.008 2.09.041 2.829c.087 1.879.967 2.783 2.87 2.87.737.033.959.041 2.828.041
+                            <a href="https://instagram.com/panoramabinusmalang?utm_medium=copy_link">
+                                <path
+                                    d="M14.829 6.302c-.738-.034-.96-.04-2.829-.04s-2.09.007-2.828.04c-1.899.087-2.783.986-2.87 2.87-.033.738-.041.959-.041 2.828s.008 2.09.041 2.829c.087 1.879.967 2.783 2.87 2.87.737.033.959.041 2.828.041
             1.87 0 2.091-.007 2.829-.041 1.899-.086 2.782-.988 2.87-2.87.033-.738.04-.96.04-2.829s-.007-2.09-.04-2.828c-.088-1.883-.973-2.783-2.87-2.87zm-2.829 9.293c-1.985 0-3.595-1.609-3.595-3.595 0-1.985 1.61-3.594 3.595-3.594s3.595 1.609 3.595 3.594c0
             1.985-1.61 3.595-3.595 3.595zm3.737-6.491c-.464 0-.84-.376-.84-.84 0-.464.376-.84.84-.84.464 0 .84.376.84.84 0 .463-.376.84-.84.84zm-1.404 2.896c0 1.289-1.045 2.333-2.333 2.333s-2.333-1.044-2.333-2.333c0-1.289 1.045-2.333 2.333-2.333s2.333 1.044
             2.333 2.333zm-2.333-12c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.958 14.886c-.115 2.545-1.532 3.955-4.071 4.072-.747.034-.986.042-2.887.042s-2.139-.008-2.886-.042c-2.544-.117-3.955-1.529-4.072-4.072-.034-.746-.042-.985-.042-2.886
-            0-1.901.008-2.139.042-2.886.117-2.544 1.529-3.955 4.072-4.071.747-.035.985-.043 2.886-.043s2.14.008 2.887.043c2.545.117 3.957 1.532 4.071 4.071.034.747.042.985.042 2.886 0 1.901-.008 2.14-.042 2.886z " /></a>
+            0-1.901.008-2.139.042-2.886.117-2.544 1.529-3.955 4.072-4.071.747-.035.985-.043 2.886-.043s2.14.008 2.887.043c2.545.117 3.957 1.532 4.071 4.071.034.747.042.985.042 2.886 0 1.901-.008 2.14-.042 2.886z " />
+                                </a>
                         </svg>
                         <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" class="md:ml-3">
                             <path
