--- a/public/artikel-detail4.html
+++ b/public/artikel-detail4.html
@@ -96,7 +96,8 @@
                             <li>Meningkatkan Shutter Speed</li>
                             <p>Yang kedua yaitu Meningkatkan Shutter Speed, setting ini untuk menghindari cahaya berlebih. Obyek pada siang hari terlihat lebih menarik biasanya. Namun, saat cahaya menghalangi kamera mirrorless anda, maka hasilnya pun tidak
                                 akan maksimal. Namun anda tidak perlu khawatir dengan meningkatkan Shutter Speed, dapat menurunkan aputure. Dengan anda meningkatkna Shutter Speed dari 1/1000 hingga 1/5000 maka akan mendapatkan hasil yang maksimal dan
-                                semakin baik. Hal tesebut tidak perlu anda khawatirkan saat mengabil gambar di siang hari.</p>
+                                semakin baik. Hal tesebut tidak perlu anda khawatirkan saat mengabil gambar di siang hari.
+                            </p>
                             <li>Menggunakan Fill Flash</li>
                             <p>Kebanyakn orang tidak suka menggunakan Flash pada kamera baik itu kamera mirrorless maupun kamera sartphone dengan alasan hasilnya tidak bagus d an terlalu cerah pada hasil foto yang dihasilkan. Namun anda perlu tau bahwa anda
                                 dapat mensetting kamera mirrorless anda untuk membantu kamera dalam menerangi obyek yang gelap akibat membelakangi cahaya. Dengan cara tersebut dapat menghasilkan gambar yang lebih menarik dan anda hanya perlu mengubah
@@ -110,21 +111,21 @@
                         </div>
                     </div>
                     <div class="mt-10 md:ml-20">
-                        <img src="/public/images/artikel1.jpg" class="w-full md:w-3/4 rounded-xl">
+                        <img src="/public/images/detail-artikel2.jpg" class="w-full md:w-3/4 rounded-xl">
                         <div class="max-w-xs mt-2 font-bold text-md caption-articel-1 ">
-                            Kegiatan Panorama Selama Pandemi dan Event di Binus
+                            Fotografi Bukan Sekedar Cekrek!
                         </div>
                         <div class="max-w-xs mt-2 text-xs">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos fugit repudiandae quos qui accusamus et architecto,.
+                            Untuk menjadi fotografer tentunya tidak hanya bermodalkan peralatan yang ‘wah’
                         </div>
                     </div>
                     <div class="mt-10 md:ml-20">
-                        <img src="/public/images/artikel1.jpg" class="w-full md:w-3/4 rounded-xl">
+                        <img src="/public/images/detail-artikel.jpg" class="w-full md:w-3/4 rounded-xl">
                         <div class="max-w-xs mt-2 font-bold text-md caption-articel-1 ">
-                            Kegiatan Panorama Selama Pandemi dan Event di Binus
+                            Kamera Polaroid
                         </div>
                         <div class="max-w-xs mt-2 text-xs">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos fugit repudiandae quos qui accusamus et architecto,.
+                            Polaroid merupakan merk dari perusahaan kamera polaroid, perusahaan polaroid ini
                         </div>
                     </div>
                     <div class="mt-10 md:ml-20">
@@ -169,7 +170,7 @@
             1.985-1.61 3.595-3.595 3.595zm3.737-6.491c-.464 0-.84-.376-.84-.84 0-.464.376-.84.84-.84.464 0 .84.376.84.84 0 .463-.376.84-.84.84zm-1.404 2.896c0 1.289-1.045 2.333-2.333 2.333s-2.333-1.044-2.333-2.333c0-1.289 1.045-2.333 2.333-2.333s2.333 1.044
             2.333 2.333zm-2.333-12c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.958 14.886c-.115 2.545-1.532 3.955-4.071 4.072-.747.034-.986.042-2.887.042s-2.139-.008-2.886-.042c-2.544-.117-3.955-1.529-4.072-4.072-.034-.746-.042-.985-.042-2.886
             0-1.901.008-2.139.042-2.886.117-2.544 1.529-3.955 4.072-4.071.747-.035.985-.043 2.886-.043s2.14.008 2.887.043c2.545.117 3.957 1.532 4.071 4.071.034.747.042.985.042 2.886 0 1.901-.008 2.14-.042 2.886z " />
-                                </a>
+                            </a>
                         </svg>
                         <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" class="md:ml-3">
                             <path
