--- a/public/news.html
+++ b/public/news.html
@@ -70,7 +70,7 @@
         <div class="container">
             <div class="text-center md:flex justify-items-start" data-aos="fade-right">
                 <img src="/public/images/logo-artikel.jpg" class="mt-5 mb-5" id="img-logo">
-                <div class="mt-4 mb-12 font-bold text-5xl header-artikel" id="header-artikel">
+                <div class="mt-4 mb-12 text-5xl font-bold header-artikel" id="header-artikel">
                     Latest <span class="news">News</span>
                 </div>
             </div>
@@ -79,8 +79,8 @@
                 <div class="md:flex md:flex-col md:justify-center">
                     <img src="/public/images/mlipir.jpg" class="w-full">
                 </div>
-                <div class=" md:ml-5 caption-1 ">
-                    <div class="text-5xl font-bold title-article -mt-10">
+                <div class=" md:ml-5 caption-1">
+                    <div class="-mt-10 text-5xl font-bold title-article">
                         MLIPIR UNTUK PARA MLIJO PINTAR
                     </div>
                     <div class="mt-3 text-sm">
@@ -97,7 +97,7 @@
             <div class="mt-20 md:h-64 more-article sm:space-y-10">
                 <div class="grid-flow-col grid-rows-3 gap-4 md:grid">
                     <div class="md:row-span-3 ">
-                        <img src="/public/images/artikel-cuci-sepatu.jpg" class="w-full md:w-3/4 rounded-xl h-56 object-cover object-center">
+                        <img src="/public/images/artikel-cuci-sepatu.jpg" class="object-cover object-center w-full h-56 md:w-3/4 rounded-xl">
                         <div class="max-w-xs mt-2 font-bold text-md caption-articel-1 ">
                             Bisnis Cuci Sepatu
                         </div>
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                     <div class="md:row-span-3 ">
-                        <img src="/public/images/gallery-2.jpg" class="w-full md:w-3/4 rounded-xl  ">
+                        <img src="/public/images/gallery-2.jpg" class="w-full h-56 md:w-3/4 rounded-xl ">
                         <div class="max-w-xs mt-2 font-bold text-md caption-articel-1 ">
                             Kegiatan Panorama Selama Pandemi dan Event di Binus
                         </div>
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                     <div class="md:row-span-3 ">
-                        <img src="/public/images/putra.jpg" class="w-full md:w-full rounded-xl  object-cover object-center">
+                        <img src="/public/images/putra.jpg" class="object-cover object-center w-full h-56 md:w-3/4 rounded-xl">
                         <div class="max-w-xs mt-2 font-bold text-md caption-articel-1 ">
                             MVP Porsinara Futsal
                         </div>
