--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 <a class="nav-link" href="/index.html#magazine">Magazine</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/index.html#artikel">News</a>
+                                <a class="nav-link" href="/public/news.html">News</a>
                             </li>
                         </ul>
                         <button class="btn-upload" type="button">Upload Karyamu !</button>
